--- a/docs/model.tex
+++ b/docs/model.tex
@@ -31,6 +31,7 @@ $\omega_z$ & & Prędkość kątowa w osi Z, wektor skierowany w górę. \\
 \end{table}
 
 \section{Sposób zapisu w formacie SDF}
+\label{sec:sdf}
 	\emph{Simulation Description Format} (SDF) jest formatem XML, pozwalającym na określenie elementów i zależności pomiędzy nimi w przestrzeni trójwymiarowej, 
 	w szczególności budowy i rozmieszczenia robotów.
 	Powstał jako zamiennik poprzedniego formatu URDF ze względu na jego skomplikowaną semantykę i brak możliwości określania środowiska wokół robotów, 
