--- a/docs/title.tex
+++ b/docs/title.tex
@@ -12,7 +12,7 @@
 \end{tabular}
 \end{table}
 
-\begin{center}Sprawozdanie z Pracowni Dyplomowej \\ Inżynierskiej I --- PDI2\end{center}
+\begin{center}Praca dyplomowa Inżynierska\end{center}
 \begin{center}Informatyka\end{center}\end{large}
 
 \vfill
